@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-05-18T00:33:36Z",
-  "count" : 5,
+  "timestamp" : "2022-05-30T08:10:50Z",
+  "count" : 3,
   "count_minmax" : [ 2, 5 ],
-  "count_decinc" : [ -0, +3 ],
+  "count_decinc" : [ -2, +3 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +0 ]
