@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-05-29T00:39:51Z",
+  "timestamp" : "2022-05-30T08:10:50Z",
   "count_outdated" : 1529,
   "uniques_outdated" : 82,
-  "count" : 1592,
+  "count" : 1590,
   "uniques" : 91,
   "views" : [
     {
       "timestamp": "2022-05-16T00:00:00Z",
-      "count": 5,
+      "count": 3,
       "count_minmax": [ 2, 5 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
