@@ -1,10 +1,10 @@
 {
-  "count": 63,
+  "count": 61,
   "uniques": 1,
   "views": [
     {
       "timestamp": "2022-05-16T00:00:00Z",
-      "count": 5,
+      "count": 3,
       "uniques": 1
     },
     {
